--- a/01-howto.ipynb
+++ b/01-howto.ipynb
@@ -199,7 +199,7 @@
     "It can some times take a little while for the external server to initalize, but once it's set up, things run quickly.\n",
     "```\n",
     "\n",
-    "[^code-note]: Note that sometimes the code will look a little bit different in the notebook.  That's because we sometimes hide code that's just needed for setup in the main notes.```\n",
+    "[^code-note]: Note that sometimes the code will look a little bit different in the notebook.  That's because we sometimes hide code that's just needed for setup in the main notes.\n",
     "\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=01-howto.ipynb)"
    ]
