--- a/01-howto.ipynb
+++ b/01-howto.ipynb
@@ -129,7 +129,7 @@
     "\n",
     "This is a math class designed for engineers by engineers, but it is still a math class, which means that we'll be introducing new concepts through definitions, and telling you about the properties that they enjoy through theorems.  Although this class does not focus on proofs, and we will never ask you to prove something in homework or exam questions, we still provide you with the proofs in case you're curious.  Those of you who think you may want to pursue more theoretical work in the future are strongly encouraged to take a look at these!\n",
     "\n",
-    "To highlight some of the useful features of the online textbook format, we'll introduce a very important definitions that we'll work with a lot this semester, _linear dependence_ and _linear independence_.\n",
+    "To highlight some of the useful features of the online textbook format, we introduce two very important definitions that we'll work with a lot this semester, _linear dependence_ and _linear independence_.\n",
     "\n",
     ":::{prf:definition} Linear dependence\n",
     ":label: def-lindep\n",
