--- a/Linear Algebraic Systems/022-linsys-matvec.ipynb
+++ b/Linear Algebraic Systems/022-linsys-matvec.ipynb
@@ -399,12 +399,15 @@
     "A(B\\vv x) = \\bm A\\vv b_1 & A\\vv b_2 & \\cdots & A\\vv b_p\\em \\vv x.\n",
     "$$\n",
     "Therefore multiplying $\\vv x$ by $\\bm A\\vv b_1 & A\\vv b_2 & \\cdots & A\\vv b_p\\em$ directly transforms $\\vv x4 into $A(B\\vv x)$: we found the matrix we were looking for!\n",
-    "```{prf:definition}\n",
+    "````{prf:definition}\n",
     "If A is an $m \\times n$ matrix, and if $B$ is an $n \\times p$ matrix with columns $\\vv b_1,\\dots,\\vv b_p$, then the matrix product $AB$ is then the $m \\times p$ matrix whose columns are $A\\vv b_1, A\\vv b_2,\\dots, A\\vv b_p$, that is,\n",
-    "$$\n",
+    "```{math}\n",
+    ":label: matmul-def\n",
     "AB = A\\bm \\vv b_1 & \\vv b_2 & \\cdots & \\vv b_p\\em = \\bm A\\vv b_1 & A\\vv b_2 & \\cdots & A\\vv b_p\\em.\n",
-    "$$\n",
     "```\n",
+    "\n",
+    "Note that the product $AB$ is only defined if the number of rows of $B$ is the same as the number of columns of $A$, as otherwise the matrix-vector product $A\\vv b_i$ is not defined.\n",
+    "````\n",
     "This definition makes equation [](#matmul) true for all possible $p \\times 1$ vectors $\\vv x$ and also helps us understand that _multiplication of matrices corresponds to a composition of transformations_."
    ]
   },
@@ -435,7 +438,69 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30bd6ca0-7ffe-4642-ab6b-bd23f41b748b",
+   "id": "b5afa270-069f-4d46-a9d2-834cf50459e4",
+   "metadata": {},
+   "source": [
+    "### Row-by-Column and Column-by-Row Definition of Matrix Multiplication\n",
+    "Although we will work with the definition of matrix multiplication introduced above, it will sometimes be more convenient to work with alternative definitions, which we quickly introduce here.  We assume that you have seen these definitions before, and so just introduce them quickly, and leave verifying their equivalence as an exercise.\n",
+    "\n",
+    "```{prf:definition} Row-by-Column Matrix Multiplication\n",
+    ":label: rc-matmul\n",
+    "Let $A$ be an $m \\times n$ matrix, and $B$ an $n \\times p$ matrix.  Let $A$ have rows $\\vv r^A_i$ and $B$ have columns $\\vv b_i$, i.e.,\n",
+    "$$\n",
+    "A = \\bm \\vv r^A_1 \\\\ \\vv r^A_2 \\\\ \\vdots \\\\ \\vv r^A_m \\em, \\quad B = \\bm \\vv b_1 & \\vv b_2 & \\cdots \\vv b_p\\em.\n",
+    "$$\n",
+    "Then if we define $C=AB$ to be their $m \\times p$ matrix product, we have that the elements $c_{ij}$ of $C$ are given by the product of the $i$th row of $A$ and the $j$th column of $B$:\n",
+    "$$\n",
+    "c_{ij}=\\vv r^A_i \\vv b_i, \\quad i=1,\\dots,m,\\, j=1,\\dots,p.\n",
+    "$$\n",
+    "```\n",
+    "\n",
+    "As an example, this tells us an alternative way to compute the matrix-vector product $A\\vv x$.  Again, assuming that the rows of $A$ are $\\vv r^A_i$, we have that the $i$th element of the product $A\\vv x$ is given by the row-vector columnt-vector product $(A\\vv x)= \\vv r^A_i \\vv x$.\n",
+    "\n",
+    ":::{prf:example}  TODO: Example of Computing\n",
+    ":label: rc-matmul-example\n",
+    "write me\n",
+    ":::\n",
+    "\n",
+    "```{prf:definition} Row-by-Column Matrix Multiplication\n",
+    ":label: cr-matmul\n",
+    "Let $A$ be an $m \\times n$ matrix, and $B$ an $n \\times p$ matrix.  Let $A$ have columns $\\vv a_i$ and $B$ have rows $\\vv r^B_i$, i.e.,\n",
+    "$$\n",
+    "A = \\bm \\vv a_1 & \\vv a_2 & \\cdots \\vv a_p\\em, \\quad B = \\bm \\vv r^B_1 \\\\ \\vv r^B_2 \\\\ \\vdots \\\\ \\vv r^B_n \\em.\n",
+    "$$\n",
+    "Then we can compute their $m \\times p$ matrix product $C=AB$ by adding together the products of the columns of $A$ with the rows of $B$:\n",
+    "$$\n",
+    "C=\\vv a_1 \\vv r^B_1 + \\vv a_2 \\vv r^b_2 + \\cdots + \\vv a_n \\vv r^B_n.\n",
+    "$$\n",
+    "```\n",
+    "\n",
+    ":::{prf:example}  TODO: Example of Computing\n",
+    ":label: cr-matmul-example\n",
+    "write me\n",
+    ":::\n",
+    "\n",
+    "```{note}\n",
+    "While [](#rc-matmul) is probably most familiar to you, we'll see that depending on the setting, it is sometimes more convenient to work with one definition of matrix-matrix multiplication rather than another.  For example, [](#cr-matmul) is kind of annoying to deal with when computing matrix-matrix products by hand (it involves a lot of writing!).  But that's ok, because while you will learn how to compute things by hand for small examples, our goal in this class is to get you solving big problems using computers, and it turns out, computers are really good at dealing with something like [](#cr-matmul).\n",
+    "```\n",
+    "\n",
+    "````{exercise}  TODO: Exercise testing size of $AB$ and $BA$\n",
+    ":label: matmul-ex2\n",
+    "Write me: work out a small example where we show all three ways of computing a matrix-matrix product give the same answer.\n",
+    ":::{hint} Click me for a hint!\n",
+    ":class: dropdown\n",
+    "Write me\n",
+    "\n",
+    ":::\n",
+    "```{solution} my-exercise\n",
+    ":class: dropdown\n",
+    "Write me\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4090e238-c919-45bf-bfb0-16c0d49d87a9",
    "metadata": {},
    "source": [
     "### Properties of Matrix Multiplication\n",
@@ -494,14 +559,74 @@
    "id": "40ac70c4-7f56-449e-ab46-1d277f149989",
    "metadata": {},
    "source": [
-    "## Block Matrices and Vectors\n",
-    "TODO: adapt from VMLS"
+    "## Block Matrices\n",
+    "\n",
+    "You may not have known it at the time, but we've already been working with examples of block matrices.  For example, when we wrote a matrix $A$ in terms of its columns $\\vv a_i$ as $A = \\bm \\vv a_1 & \\vv a_2 & \\cdots & \\vv a_n$, what we are really saying is that we are going to _partition_ the matrix $A$ into _blocks_ (or sub-matrices) $\\vv a_i$ such that I can build $A$ by concatenating or stacking the column vectors $\\vv a_i$ together appropriately.  It turns out, we can generalize this idea: the blocks can be arbitrary sized matrices, and we can stack them together in any way that we'd like as long as dimensions match up.  We'll work through a couple of examples that give you the basic idea of what we mean.\n",
+    "\n",
+    "### Building Block Matrices\n",
+    "Suppose we have a scalar $c$,[^myref] a $2 \\times 1$ column vector $\\vv c$, a $1 \\times 3$ row vector $\\vv r$, a $2 \\times 2$ matrix $A$, and a $2 \\times 3$ matrix $B$.  What are some _block matrices_ we can build out of these pieces?\n",
+    "- **Block vectors:** We can vertically stack column vectors with other column vectors, and horizontally stack row vectors with other row vectors. For example, all of the following are perfectly legitimate block vectors:\n",
+    "  $$ \\bm \\vv c \\\\ c \\\\ \\vv c\\em, \\quad \\bm \\vv r & \\vv r & c & \\vv r\\em.$$\n",
+    "- **Block matrices:** We can stack elements both horizontally and vertically as long as dimensions match up.  In the following examples, we include element dimensions as subscripts to emphasize dimension compatibility:\n",
+    "  $$ \\bm \\begin{array}{c} A_{2\\times2} & \\vv c_{2 \\times 1}\\end{array} \\\\ \\vv r_{3\\times 1}\\em, \\quad \\bm A_{2\\times 2} & \\vv c_{2\\times 1} & B_{2\\times 3} & A_{2\\times 2}\\em. $$ The first example is a little tricky, because the top _block row_ has two elements $\\bm A_{2\\times2} & \\vv c_{2 \\times 1}\\em$, which is a $2 \\times 3$ matrix, whereas the second _block row_ $\\vv r$ has one element and is a $1 \\times 3$ matrix.  But, this is still ok, because the dimensions match, and we end up with a $3 \\times 3$ matrix.\n",
+    "- **Stacks on stacks:** You can put block matrices as blocks within other matrices, so long as dimensions agree.  For example, if we define $D = \\bm A_{2\\times2} & \\vv c_{2 \\times 1}\\em$ we can write $$ \\bm D_{2\\times 3} \\\\ \\vv r_{1\\times 3}\\em,$$ which is a much cleaner and easier expression to read.\n",
+    "```{tip}\n",
+    "When stacking elements horizontally, they all need to have the same number of rows.  For example, if we look at the first dimension index of $A_{2\\times 2}$, $\\vv c_{2\\times 1}$, and $B_{2\\times 3}$ we quickly see that they all have 2 rows, and so we are free to stack them horizontally in any way that we want.  Similarly, when stacking elements vertically, we need to make sure that they have the same that they all have the same number of columns.  We can check this quickly by looking at the second dimension index.\n",
+    "```\n",
+    "\n",
+    "\n",
+    "```{prf:example} TODO: Block Matrices and Vectors\n",
+    "Give the above things numerical values, and write out what they actually end up being.\n",
+    "```\n",
+    "[^myref]: Remember that a scalar $c$ is both a row vector and a column vector!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "116f2588-4064-45a1-b8fb-eaf9c71bd1aa",
+   "metadata": {},
+   "source": [
+    "### Block Matrix Multiplication\n",
+    "\n",
+    "Suppose I am given two block matrices,\n",
+    "$$\n",
+    "M_1 = \\bm A & B \\\\ C & D\\em, \\quad M_2 = \\bm E & F \\\\ G & H \\em,\n",
+    "$$\n",
+    "and to make things simple, we will assume that all of the _block elements_ $A,B,C,D,E,F,G$ are $2 \\times 2$.  How should we compute the _block matrix product_ $M_1 M_2$?\n",
+    "\n",
+    "The good news is that all of the rules for matrix-matrix multiplication we saw above extend to the block matrix setting, with the usual caveats that dimensions need to be compatible so that the various product terms exist.  For example, if we let $K_1$ and $\\vv K_2$ be the _block columns_ of $M_2$, i.e.,\n",
+    "$$\n",
+    " K_1 = \\bm E \\\\ G\\em, \\quad K_2 = \\bm F \\\\ H\\em,\n",
+    "$$\n",
+    "then we can follow our [first definition of matrix-matrix multiplication](#matmul-def) equation and write\n",
+    "$$\n",
+    "M_1M_2 = \\bm M_1 K_1 & M_1 K_2 \\em.\n",
+    "$$\n",
+    "Now, if we turn our attention to computing $M_1 K_1$, we can again follow our definition of [matrix-vector multiplication](#mat-vec) to compute\n",
+    "$$\n",
+    "M_1 K_1 = \\bm A & B \\\\ C & D\\em\\bm E \\\\ G\\em = \\bm A \\\\ C \\em E + \\bm B \\\\ D\\em G = \\bm AE + BG \\\\ CE + DG \\em.\n",
+    "$$\n",
+    "In the same way we compute\n",
+    "$$\n",
+    "M_1 K_2 = \\bm A & B \\\\ C & D\\em\\bm F \\\\ H\\em = \\bm A \\\\ C \\em F + \\bm B \\\\ D\\em H = \\bm AF + BH \\\\ CF + DH \\em,\n",
+    "$$\n",
+    "to get\n",
+    "(blockmatmul)=\n",
+    "$$ M_1 M_2 = \\bm M_1 K_1 & M_1 \\vv K_2 \\em = \\bm AE + BG & AF + BH \\\\ CE + DG & CF + DH \\em.$$\n",
+    "\n",
+    "```{prf:example} TODO: Block Matrix Multiplication\n",
+    "Give the above things numerical values, and write out what they actually end up being.  Compare what happens when you do block matrix multiplication versus \"normal\" matrix multiplication.\n",
+    "```\n",
+    "\n",
+    "```{warning}\n",
+    "Although block matrix multiplication follows the same \"rules\" as regular matrix multiplication, there are some things we need to be careful about.  First, dimensions of $A,B,C,D,E,F,G$ need to be such that all of the products we need to compute exist, i.e., the products $AE, BG, AF, BH, CE, DG, CF, DH$ need to exist.  Second, because in general $AB \\neq BA$, i.e., matrix multiplication does not commute in general, the order matters.  For example, I cannot replace the $(1,1)$ block of $M_1 M_2$, which is given by $AE + BG$, with $EA + BG$!\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65622db4-83b8-4b54-b039-dc04514a5d99",
+   "id": "502500e9-20e3-431e-bfed-822ebbaf1291",
    "metadata": {},
    "outputs": [],
    "source": []
