--- a/Linear Algebraic Systems/024-linsys-perms.ipynb
+++ b/Linear Algebraic Systems/024-linsys-perms.ipynb
@@ -12,10 +12,10 @@
    },
    "source": [
     "---\n",
-    "title: Solving Linear Systems via Gaussian Elimination\n",
+    "title: The Permuted LU-Factorization\n",
     "subject:  Linear Algebraic Systems\n",
-    "subtitle: Forward elimination and back substitution are all you need\n",
-    "short_title: Gaussian Elimination\n",
+    "subtitle: Let's mix things up a little\n",
+    "short_title: Permutations and Permutation Matrices\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -30,10 +30,12 @@
   {
    "cell_type": "markdown",
    "id": "efca8556-3e7f-4f1c-b466-04f0e14b12e5",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Reading\n",
-    "Material related to this page, as well as additional exercises, can be found in ALA Ch. 1.1, LAA Ch 1.1, and ILA Ch. 2.2.  These notes are mostly based on ALA Ch 1.1."
+    "Material related to this page, as well as additional exercises, can be found in ALA Ch. 1.4, LAA Ch 2.5, and ILA Ch. 2.4.  These notes are mostly based on ALA Ch 1.4."
    ]
   },
   {
