--- a/Linear Algebraic Systems/023-linsys-gauss-LU.ipynb
+++ b/Linear Algebraic Systems/023-linsys-gauss-LU.ipynb
@@ -213,96 +213,105 @@
    "id": "8a40ebc5-ca2e-4efb-9fa7-67b860d67463",
    "metadata": {},
    "source": [
-    "## LU (Lower-Upper) Factorization\n",
-    "The approach we saw above is a correct and perfectly acceptable way of solving systems of linear equations with regular $A$ matrices.  It turns out that it is very closely related to an approach based on _factorizing_ the coefficient matrix $A$ into a product of a lower triangular matrix $L$ and and upper triangular matrix $U$ such that $A=LU$, which we'll develop in this section. You'll see that the expressions end up being somewhat simpler to work with, and that the pseudocode is a bit \"cleaner\" (specifically, we won't have nested for loops).  This is also _much_ closer to the way solutions to linear systems are implemented in modern linear algebra computational packages.\n",
+    "## Elementary Matrices\n",
+    "It turns out that our strategy of adding equations together is in fact an operation that can be realized by matrix multiplication.  Our starting point will be to introduce a the idea of an _elementary matrix_, which encodes the corresponding elementary operation.  So far we've only seen the elementary operation of adding equations together, which we recall, is equivalent to adding rows of the augmented matrix $M = [A \\, | \\, \\vv b]$ together, but we'll see other types of operations shortly.  The definition below will work for all of them.\n",
     "\n",
-    "We'll start with a worked example, and then define the general algorithm.  This section is based on Ch 5.3 of Jessy Grizzles [ROB 101 notes](https://github.com/michiganrobotics/rob101/blob/main/Fall%202021/Textbook/ROB_101_December_2021_Grizzle.pdf).\n",
+    "```{prf:definition} Elementary Matrix\n",
+    ":label: elementary\n",
+    "The _elementary matrix_ associated with an elementary row operation for $m$-rowed matrices is the $m \\times m$ matrix obtained by applying the the row operation to the $m\\times m$ identity matrix $I_m$.\n",
+    "```\n",
     "\n",
-    "### Column-Row Multiplication\n",
-    "A special case of matrix multiplication is multiplying a $m \\times 1$ column vector $\\vv c$ and a $1 \\times n$ row vector $\\vv r$ together.  We'll work with $m=n=3$ here, but the general case is very similar.  Applying the rules of matrix arithmetic, we see that if\n",
+    "This definition is a bit abstract, so let's see it in action.  Suppose that we have a system of three equations in three unknowns, encoded by the augmented matrix $M = [ A\\, | \\, \\vv b]$, where $A$ is a $3\\times 3$ matrix and $\\vv b$ is a $3 \\times 1$ vector.  What is the elementary matrix associated with subtracting twice the first row from teh second row?  If we start with the identify matrix \n",
     "$$\n",
-    "\\vv c = \\bm c_1\\\\ c_2\\\\ c_3\\em, \\quad \\vv r = \\bm r_1 &  r_2 & r_3\\em,$$\n",
-    "then\n",
-    "$$\\vv c \\vv r = \\bm r_1 \\vv c & r_2 \\vv c & r_3 \\vv c\\em = \\bm c_1r_1 & c_1 r_2 & c_1 r_3 \\\\c_2r_1 & c_2 r_2 & c_2 r_3\\\\ c_3r_1 & c_3 r_2 & c_3 r_3\\em = \\bm c_1 \\vv r \\\\ c_2 \\vv r \\\\ c_3 \\vv r\\em.\n",
+    "I_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\em,\n",
     "$$\n",
-    "(prop1)=\n",
-    "For this section, the most important property we will use is that the $i$th row of $\\vv c \\vv r$, given by $c_i \\vv r$, is a copy of the row vector $\\vv r$ scaled by the corresponding component $c_i$ of the column vector $\\vv c$.\n",
+    "and apply this operation to it, we end up with the elementary matrix \n",
+    "$$\n",
+    "E_1 = \\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em,\n",
+    "$$\n",
+    "which we named $E_1$ just to keep track of which elementary matrix we are talking about later on.  Let's check if it does what it's supposed to on a two different $3 \\times 3$ matrices \n",
+    "$$\n",
+    "\\underbrace{\\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em}_{E_1}\\bm 1 & 2 & 3 \\\\ 4 & 5 & 6 \\\\ 7 & 8 & 9 \\em = \\bm 1 & 2 & 3 \\\\ 2 & 1 & 0 \\\\ 7 & 8 & 9 \\em, \\quad \\underbrace{\\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em}_{E_1}\\bm 1 & 2 & 3 \\\\ 1 & 2 & 3 \\\\ 1 & 2 & 3 \\em =\\bm 1 & 2 & 3 \\\\ -1 & -2 & -3 \\\\ 1 & 2 & 3 \\em .\n",
+    "$$\n",
+    "Indeed it does, and by playing around with our rules of matrix arithmetic and multiplication, you should be able to convince yourself that that left multiplying _any_ 3-row matrix by $E_1$ will subtract twice its from its second row.\n",
     "\n",
-    "### Pealing the onion\n",
-    "Consider the square matrix\n",
-    "$$\n",
-    "M = \\bm 1 & 4 & 5 \\\\ 2 & 9 & 17 \\\\ 3 & 18 & 58 \\em.\n",
-    "$$\n",
-    "Our goal is to find a a column vector $\\vv c_1$ and a row vector $\\vv r_1$ such that\n",
-    "$$\n",
-    "M - \\vv c_1 \\vv r_1 = \\bm 0 & 0 & 0\\\\ 0 & \\star & \\star \\\\ 0 & \\star & \\star\\em,\n",
-    "$$\n",
-    "where here $\\star$ means we do not care about the specific values.  Another way of saying this is that we want to zero out the first row and column of $M$ by choosing $\\vv c_1$ and $\\vv r_1$ so that the first row and first column of the matrix product $\\vv c_1 \\vv r_1$ match those of $M$.  Can we do this?\n",
+    "We can also use [](#elementary) to reverse engineer what row operation an elementary matrix is encoding.\n",
     "\n",
-    "In the special case when the $(1,1)$ entry of $M$ is equal to 1, i.e., when $m_{11}=1$, we can do this pretty easily!  We'll do the obvious thing and just define $\\vv c_1$ and $\\vv r_1$ to be the first column of $M$ and the first row of $M$, respectively, that is, $\\vv c_1 = (1,2,3)$ and $\\vv r_1 = \\bm 1 & 4 & 5\\em$.[^brackets]  Then, remembering the [property](#prop1) that we identified earlier, we have that\n",
+    "````{exercise} Reverse Engineering Elementary Matrices\n",
+    ":label: em-ex\n",
+    "What elementary row operations are realized by left multiplying by the following matrices?\n",
     "$$\n",
-    "\\vv c_1 \\vv r_1 = \\bm 1 \\\\ 2 \\\\ 3\\em \\bm 1 & 4 & 5\\em=\\bm 1 & 4 & 5 \\\\ 2 & 8 & 10 \\\\ 3 & 12 & 15\\em,\n",
+    "E_2 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ -1 & 0 & 1 \\em, \\quad E_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & \\frac{1}{2} & 0 \\em.\n",
     "$$\n",
-    "and would you look at that, we met our objective:\n",
+    ":::{hint} Click me for a hint!\n",
+    ":class: dropdown\n",
+    "What would I have to do to\n",
     "$$\n",
-    "M = \\bm \\underline 1 & \\underline 4 & \\underline 5 \\\\ \\underline 2 & 9 & 17 \\\\ \\underline 3 & 18 & 58 \\em, \\quad \\vv c_1 \\vv r_1 = \\bm \\underline 1 & \\underline 4 & \\underline 5 \\\\ \\underline 2 & 8 & 10 \\\\ \\underline 3 & 12 & 15\\em.\n",
+    "I_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\em,\n",
     "$$\n",
-    "We can then compute\n",
+    "to get $E_2$ and $E_3$?\n",
+    ":::\n",
+    "```{solution} em-ex\n",
+    ":class: dropdown\n",
+    "Left multiplying by $E_2$ realizes subtracting the first row from the last row of a matrix.  This is true because to get the last row of $E_2$, $\\bm -1 & 0 & 1\\em$ from $I_3$, we need to subract the first row $\\bm 1 & 0 & 0 \\em$ of $I_3$ from the last row $\\bm 0 & 0 & 1 \\em$ of $I_3$.\n",
+    "\n",
+    "Using similar reasoning, we see that left multiplying by $E_3$ realizes adding $1/2$ the second row of a matrix to its last row.\n",
+    "```\n",
+    "````\n",
+    "\n",
+    "### Elementary Matrices in Action\n",
+    "Let us use elementary matrices to design a matrix that can help us solve linear equations.  Let's revisit the very first system of equations we encountered:\n",
     "\\begin{eqnarray}\n",
-    "M - \\vv c_1 \\vv r_1 &= \\bm \\underline 1 & \\underline 4 & \\underline 5 \\\\ \\underline 2 & 9 & 17 \\\\ \\underline 3 & 18 & 58 \\em - \\bm \\underline 1 & \\underline 4 & \\underline 5 \\\\ \\underline 2 & 8 & 10 \\\\ \\underline 3 & 12 & 15\\em\\\\\n",
-    "& = \\bm \\underline 0 & \\underline 0 & \\underline 0 \\\\ \\underline 0 & 1 & 7 \\\\ \\underline 0 & 6 & 43\\em.\n",
+    "\\label{simple-linsys}\n",
+    "x_1+2x_2+x_3 & = 2,\\\\\n",
+    "2x_1+6x_2+x_3 & =7,\\\\\n",
+    "x_1+x_2+4x_3 & =3,\n",
     "\\end{eqnarray}\n",
-    "\n",
-    "[^brackets]: Remember that $\\vv c_1 = (1,2,3)$ is a $3 \\times 1$ column vector because of the round brackets and commas, and $\\vv r_1 = \\bm 1 & 4 & 5\\em$ is a $1 \\times 3$ row vector because of the square brackets and no commas.\n",
-    "\n",
-    "In doing this, we've taken a $3 \\times 3$ matrix and essentially turned it into a $2 \\times 2$ matrix.  Let's see if we can do it again: define $\\vv c_2$ and $\\vv r_2$ to be the second column and second row of $M-\\vv c_1\\vv r_1$:\n",
+    "or in matrix-vector form\n",
+    "$$\\underbrace{\\begin{bmatrix} 1 & 2 & 1 \\\\\n",
+    "2 & 6 & 1 \\\\\n",
+    "1 & 1 & 4 \\end{bmatrix}}_A\\underbrace{\\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}}_{\\vv x} = \\underbrace{\\begin{bmatrix} 2 \\\\ 7 \\\\ 3 \\end{bmatrix}}_{\\vv b}\n",
     "$$\n",
-    "\\vv c_2 = \\bm 0 \\\\ 1 \\\\ 6 \\em, \\quad \\vv r_2 = \\bm 0 & 1 & 7\\em.\n",
+    "which we solved by first applying the row operation encoded by $E_1$ (subtracted twice equation 1 from equation 2), then applying the operation encoded by $E_2$ (subtract the first equation from the last equation ), and finally by applyiing the operation encoded by $E_3$ (add 1/2 first equation to last equation).  Funny how that conveninently worked out!  Therefore, if we keep careful track of the row operations and their matrix multiplication realizations, we conclude that:\n",
     "$$\n",
-    "We then compute\n",
+    "A = \\begin{bmatrix} 1 & 2 & 1 \\\\\n",
+    "2 & 6 & 1 \\\\\n",
+    "1 & 1 & 4 \\end{bmatrix}, \\quad E_3 E_2 E_1 A = U = \\bm 1 & 2 & 1 \\\\ 0 & 2 & -1 \\\\ 0 & 0 & \\frac{5}{2} \\em.\n",
     "$$\n",
-    "\\vv c_2 \\vv r_2 = \\bm 0 \\\\ 1 \\\\ 6 \\em\\bm 0 & 1 & 7\\em=\\bm 0 & 0 & 0 \\\\ 0 & 1 & 7 \\\\ 0 & 6 & 42\\em,\n",
-    "$$\n",
-    "to obtain\n",
-    "$$\n",
-    "M - \\vv c_1 \\vv r_1 = \\bm  0 & 0 & 0 \\\\ 0 & \\underline 1 & \\underline 7 \\\\ 0 & \\underline 6 & 43\\em, \\quad \\vv c_2 \\vv r_2 = \\bm  0 & 0 & 0 \\\\ 0 & \\underline 1 & \\underline 7 \\\\ 0 & \\underline 6 & 42\\em.\n",
-    "$$\n",
-    "Next we subtract the latter from the former:\n",
-    "\\begin{eqnarray}\n",
-    "(M - \\vv c_1\\vv r_1) - \\vv c_2 \\vv r_2 &= \\bm  0 & 0 & 0 \\\\ 0 & \\underline 1 & \\underline 7 \\\\ 0 & \\underline 6 & 43\\em - \\bm  0 & 0 & 0 \\\\ 0 & \\underline 1 & \\underline 7 \\\\ 0 & \\underline 6 & 42\\em \\\\\n",
-    "& = \\bm  \\underline 0 & \\underline 0 & \\underline 0 \\\\ \\underline 0 & \\underline 0 & \\underline 0 \\\\ \\underline 0 & \\underline 0 & 1\\em.\n",
-    "\\end{eqnarray}\n",
-    "\n",
-    "Just like that, we're down to what is essentially a $1 \\times 1$ matrix.  We'll quickly note that $\\vv c_3 = (0, 0, 1)$ and $\\vv r_3 = \\bm 0 & 0 & 1\\em$ satisfies\n",
-    "$$\n",
-    "\\vv c_3 \\vv r_3 =  \\bm  \\underline 0 & \\underline 0 & \\underline 0 \\\\ \\underline 0 & \\underline 0 & \\underline 0 \\\\ \\underline 0 & \\underline 0 & 1\\em,\n",
-    "$$\n",
-    "and we then immediately have that $M - \\vv c_1 \\vv r_1 - \\vv c_2 \\vv r_2 -\\vv c_3 \\vv r_3 = 0$, or equivalently\n",
-    "\\begin{equation}\n",
-    "M = \\vv c_1 \\vv r_1 + \\vv c_2 \\vv r_2 + \\vv c_3 \\vv r_3 =\\underbrace{\\bm \\vv c_1 & \\vv c_2 & \\vv c_3\\em}_{L}\\underbrace{\\bm\\vv r_1 \\\\ \\vv r_2 \\\\ \\vv r_3\\em}_{U}.\n",
-    "\\end{equation}\n",
-    "TODO: add reference to property of block matrix multiplication.\n",
-    "In the above, used $L$ and $U$ for two special matrices that were built up from the $\\vv c_i$ and $\\vv r_i$ we have identified so far:\n",
-    "- $L = \\bm \\vv c_1 & \\vv c_2 & \\vv c_3\\em = \\bm 1 & 0 & 0 \\\\ 2 & 1 & 0 \\\\ 3 & 6 & 1\\em$  is _lower triangular_,\n",
-    "- $U = \\bm\\vv r_1 \\\\ \\vv r_2 \\\\ \\vv r_3\\em = \\bm 1 & 4 & 5 \\\\ 0 & 1 & 7 \\\\ 0 & 0 & 1 \\em$ is _upper triangular_, and\n",
-    "- $M=LU$, that is we _factored_ our original matrix $M$ into a product of a lower triangular matrix $L$ and an upper triangular matrix $U$."
+    "The way to read the expression $E_3 E_2 E_1 A$ is from left-to-right: we start with $A$, then apply $E_1$, then $E_2$, and finally $E_3$.  If we give the composition of elementary operations a name, say $E = E_3 E_2 E_1 A$, then we can check that $E [A \\, | \\, \\vv b] = [U \\, | \\, \\vv c]$, that is to say left multiplying the augmented matrix $M = [A \\, | \\, \\vv b]$ by the matrix $E$ performs Gaussian Elmination for us!  This is just a first taste of a powerful feature of linear algebra: _we can encode very sophisticated and complex operations via matrix multiplication._\n",
+    "```{important}\n",
+    "The order of the operations here matters!  For example, $E_2 E_1 E_3 A$ is a very different matrix than $E_3 E_2 E_1 A$.\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "190af37f-e3b4-4a50-be9c-8de8025d87c7",
+   "id": "7a0c13f7-bef5-4b4a-9b35-1ed79560f3aa",
    "metadata": {},
    "source": [
-    "### A More General Version\n",
-    "We got lucky in the previous example: at every step of the way, the upper left most entry of the matrix was equal to 1.  In general, this won't be the case, but we'll see that for regular matrices $A$, our trusty friend the _pivot_ will help us out.\n",
+    "### Solving Linear Equations with $LU$-factorizations\n",
+    "We've made a lot of progress, but we still do not have a way of dealing with cases where the matrix $A$ is not regular, i.e., when it has pivots that are zero.  We'll defer that situation for a little bit still, and instead look at why we bothered with $LU$-factorizations to begin with!  Suppose we are interested in solving a system of linear equations $A\\vv x = \\vv b$, and we assume that $A$ is regular so that we can apply the algorithm above to compute an $LU$-facotrization of $A$, i.e., we find a lower triangular matrix $L$ and an upper triangular matrix $U$ so that $A=LU$.  Then our linear system becomes $LU\\vv x = \\vv b$.  \n",
     "\n",
-    "TODO: finish this section.  Observe that each step of \"peeling the onion\" is actually a \"batch\" version of forward elimination. Highlight connection to regular Gaussian elimination algorithm (basically each step is doing one inner for loop all at once)."
+    "Neat, but so what?  Well we know how to solve linear systems that look like $U\\vv x = \\vv z$, for $U$ upper triangular, by Back Substitution, and while we haven't seen it explicitly, hopefully you believe that we can solve linear systems that look like $L\\vv y = \\vv c$, for $L$ lower triangular, by _Forward Substitution_.[^fsub]  Our strategy will be to turn solving $A\\vv x = \\vv b$ into solving a lower triangular system by Forward Substitution, and then an upper triangular system by Back Substitution, both things we know how to do easily!  With that in mind, let us introduce a new intermediate variable $\\vv z = U \\vv x$.  Then I can find the solution to $A\\vv x = LU\\vv x = \\vv b$ by solving\n",
+    "$$\n",
+    "L\\vv z = \\vv b,\n",
+    "$$\n",
+    "for $\\vv z$ via Forward Substitution, and then solving \n",
+    "$$\n",
+    "U \\vv x = \\vv z,\n",
+    "$$\n",
+    "for $\\vv x$ via Backward Substitution.  If we piece everything together, we see that $\\vv x$ is indeed a solution to our original equation $A\\vv x = \\vv b$ because\n",
+    "$$\n",
+    "A\\vv x = L\\underbrace{U \\vv x}_{=\\vv z}= \\underbrace{L\\vv z}_{=\\vv b} = \\vv b.\n",
+    "$$\n",
+    "\n",
+    "[^fsub]: Forward Substitution is exactly what it sounds like.  To solve $L\\vv y = \\vv c$, when $L$ is lower triangular, we start at the top row and set $y_1 = c_1/l_{11}$. We then move down a row, and solve $l_{21}y_1 + l_{22}y_2 = c_2$ by plugging in $y_1$ and solving for $y_2$.  We continue in this manner until we've solved for $\\vv y$."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5070c258-45be-49fa-8bec-f6b1df117c7e",
+   "id": "f1d3acfc-93ea-42bf-9d2f-53d30b2d6c75",
    "metadata": {},
    "outputs": [],
    "source": []
