modified:   01-howto.ipynb

--- a/01-howto.ipynb
+++ b/01-howto.ipynb
@@ -12,7 +12,7 @@
    },
    "source": [
     "---\n",
-    "title: A guide to using this notebook\n",
+    "title: A guide to using this book\n",
     "subject: How-to\n",
     "subtitle: Interactive and responsive lecture notes\n",
     "short_title: How to use this book\n",
