modified:   01-howto.ipynb 	modified:   Linear system of equations/021-linsys-gauss.ipynb 	modified:   Linear system of equations/023-linsys-gauss-LU.ipynb

--- a/Linear system of equations/021-linsys-gauss.ipynb
+++ b/Linear system of equations/021-linsys-gauss.ipynb
@@ -60,10 +60,6 @@
     "tags": []
    },
    "source": [
-    "## Solution of Linear Systems\n",
-    "\n",
-    "_Gaussian Elimination_ is a simple systematic algorithm to solve systems of linear equations.  You saw a version of it in Math 1410 when you covered [row reduction](https://www.youtube.com/watch?v=axSR_SMzRy8&index=81&list=PL8erL0pXF3JYm7VaTdKDaWc8Q3FuP8Sa7).  We'll remind ourselves of the basics of row reduction and Gaussian elimination, before moving on to more advanced (and practical) approaches to solving systems of linear equations.  In this section, we review the method in the most important case, in which there is the same number of equations as unknowns, and we'll come back to the general situation later on.\n",
-    "\n",
     "## Terminology\n",
     "A _linear equation_[^linear] in the _variables_ $x_1,\\dots,x_n$ is an equation that can be written in the form\n",
     "```{math}\n",
@@ -87,7 +83,7 @@
     "1. Yes because it can be rearranged algebraically to match [](#lin-eq)\n",
     "2. Yes because it can be rearranged algebraically to match [](#lin-eq)\n",
     "3. No because of the $x_1x_2$ term\n",
-    "4. No because of the $\\sqrt(x_3)$ term.\n",
+    "4. No because of the $\\sqrt{x_3}$ term.\n",
     "```\n",
     "````\n",
     "[^linear]: We'll see later exactly why we call these equations linear, and the deep implications that linearity has on science and engineering.  For now, it's enough to think of an equation as being linear if the unknowns only appear to the first power, and there are no product terms like $x_1x_2$ or $x_1x_2x_3$, in it.\n",
@@ -102,7 +98,7 @@
     "\\end{eqnarray}\n",
     "which is a system of three equations in three unknowns.\n",
     "\n",
-    "A _solution_ of the system is a list $(s_1,s_2,\\dots,s_n)$ of numbers that makes each equation a true statement when the values $s_1,\\dots,s_n$ are substituted for $x_1,\\dots,x_n$, respectively.  For instance, $(-3,2,1)$ is a solution of system [](#simple-linsys0) because, when these values are substituted in [](#simple-linsys0) for $x_1,x_2,x_3$, respectively, the equations simplify to $2=2$, $7=7$, and $3=3$.  The set of all possible solutions is called the _solution set_ of the linear system.  We state an important fact regarding the solution set of linear systems that we will understand very deeply by the end of this chapter:\n",
+    "A _solution_ of the system is a list $(s_1,s_2,\\dots,s_n)$ of numbers that makes each equation a true statement when the values $s_1,\\dots,s_n$ are substituted for $x_1,\\dots,x_n$, respectively.  For instance, $(-3,2,1)$ is a solution of system [](#simple-linsys00) because, when these values are substituted in [](#simple-linsys00) for $x_1,x_2,x_3$, respectively, the equations simplify to $2=2$, $7=7$, and $3=3$.  The set of all possible solutions is called the _solution set_ of the linear system.  We state an important fact regarding the solution set of linear systems that we will understand very deeply by the end of this chapter:\n",
     "\n",
     ":::{important} Solution Set for Linear Systems\n",
     "A system of linear equations has\n",
@@ -146,7 +142,7 @@
     "\n",
     "Before continuing, you might try to convince yourself that this observation is true. Our goal is to apply [](#linop1) judiciously to transform the system of linear equations [](#simple-linsys) into a much simpler one that is easy to solve but still has the same solutions as the original.  Any linear system that is derived from the original system by successive application of such operations will be called an _equivalent system_.  An important property is that _equivalent systems have the same solutions._\n",
     "\n",
-    "Our strategy will be to successively eliminate variables in our equations in order of appearance.  So, here, our first step is to eliminate the first variable, $x$, from the second equation.  We'll do that by subtracting twice the first equation from the second:\n",
+    "Our strategy will be to successively eliminate variables in our equations in order of appearance.  So, here, our first step is to eliminate the first variable, $x_1$, from the second equation.  We'll do that by subtracting twice the first equation from the second:\n",
     "$$\n",
     "\\begin{array}{lrl}\n",
     "\\text{[second equation]} & 2x_1+6x_2+x_3 & =7 \\\\\n",
@@ -210,17 +206,45 @@
    "id": "6ceffd52-56eb-4625-8fbc-e4696a69e3f4",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
+    "````{exercise} Finding coefficients\n",
+    ":label: ex1\n",
+    "Find the coefficients $(a, b, c)$ of the set of equations \n",
+    "\\begin{eqnarray}\n",
+    "\\label{ex1_sys}\n",
+    "ax + by + cz & = 3,\\\\\n",
+    "ax + y + cz & =2,\\\\\n",
+    "x - by - cz & =1,\n",
+    "\\end{eqnarray}\n",
+    "so that a solution is $x = -1, y = 1, z = 2$.\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "Identify the unknowns and the set of equations.\n",
     "\n",
     ":::\n",
-    "```{solution} my-exercise\n",
+    "```{solution} ex1\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "Substituting $x = -1, y = 1, z = 2$ in [](#ex1_sys), we get the set of equations\n",
+    "\\begin{eqnarray}\n",
+    "\\label{ex1_soln_1}\n",
+    "-a + b + 2c &= 3,\\\\\n",
+    "-a + 1 + 2c &=2 \\Rightarrow -a + 2c &= 1,\\\\\n",
+    "-1 - b - 2c &=1 \\Rightarrow -b - 2c &= 0,\n",
+    "\\end{eqnarray}\n",
+    "The unknowns are $(a, b, c)$ in [](#ex1_soln_1). We use the forward elimination method to first eliminate $a$ by subtracting the first equation from the second equation to get\n",
+    "\\begin{eqnarray}\n",
+    "\\label{ex1_soln_2}\n",
+    "-a + b + 2c &= 3, \\\\\n",
+    "-b &= -2,\\\\\n",
+    "- b - 2c &= 0,\n",
+    "\\end{eqnarray}\n",
+    "From [](#ex1_soln_2), we already have a triangular system which is clear after rearranging as given below\n",
+    "\\begin{eqnarray}\n",
+    "\\label{ex1_soln_3}\n",
+    "-a + 2c + b &= 3, \\\\\n",
+    "- 2c - b &= 0,\\\\\n",
+    "-b &= -2,\n",
+    "\\end{eqnarray}\n",
+    "Now, using back substitution, we get $b=2$, $- 2c - b = 0 \\Rightarrow c = -1$ and $-a + 2c + b = 3 \\Rightarrow a = -3$. Hence, the solution is ($a = -3, b = 2, c = -1$)\n",
     "```\n",
     "````"
    ]
@@ -230,26 +254,39 @@
    "id": "2c6493b5-6b12-415a-a159-646579661219",
    "metadata": {},
    "source": [
-    "````{exercise}  TODO\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
+    "````{exercise}  Finding solution(s)\n",
+    ":label: ex-2\n",
+    "Find the solution of the below set of equations sing forward elimination and back substitution\n",
+    "\\begin{eqnarray}\n",
+    "\\label{ex2_sys}\n",
+    "x + 2y + 3z &= 1, \\\\\n",
+    "3x + 2y + z &= 1, \\\\\n",
+    "7x + 2y − 3z &= 1\n",
+    "\\end{eqnarray}\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
-    "Write me\n",
-    "\n",
+    "Can multiple values satisfy a set of equations?\n",
     ":::\n",
-    "```{solution} my-exercise\n",
+    "```{solution} ex-2\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "We first eliminate $x$ from the second and third equations by doing [second eqn] $\\gets$ [second eqn] - 3[first eqn]  and [third eqn] $\\gets$ [third eqn] - 7[first eqn] to get\n",
+    "\\begin{eqnarray}\n",
+    "\\label{ex2_soln1}\n",
+    "x + 2y + 3z &= 1, \\\\\n",
+    " -4y - 8z &= -2, \\\\\n",
+    " -12y − 24z &= -6\n",
+    "\\end{eqnarray}\n",
+    "Next, we eliminate $y$ from the third equation by doing [third eqn] $\\gets$ [third eqn] - 3[second eqn] and get\n",
+    "\\begin{eqnarray}\n",
+    "\\label{ex2_soln2}\n",
+    "x + 2y + 3z &= 1, \\\\\n",
+    " -4y - 8z &= -2, \\\\\n",
+    " 0 &= 0\n",
+    "\\end{eqnarray}\n",
+    "In [](#ex2_soln2), the third equation is just a universal fact ($0=0$!). The second equation $-4y - 8z = -2$ has infinitely many solutions. For example, if $y=0$, then $z = \\frac{1}{4}$. Given some value for $y$, we can always find a value for $z$ as $z = \\frac{1 - 2y}{4}$. Substituting the corresponding value of $(y, z)$ in the first equation, we can always find a value for $x$ as $x = 1 - 2y - 3z$. \n",
     "```\n",
     "````"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "10d74d88-58e1-41a8-9d89-e2de2c9e6edd",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -272,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
