modified:   Linear system of equations/021-linsys-gauss.ipynb

--- a/Linear system of equations/021-linsys-gauss.ipynb
+++ b/Linear system of equations/021-linsys-gauss.ipynb
@@ -208,7 +208,7 @@
    "source": [
     "````{exercise} Finding coefficients\n",
     ":label: ex1\n",
-    "Find the coefficients $(a, b, c)$ of the set of equations \n",
+    "Find the coefficients $(a, b, c)$ for the set of equations \n",
     "\\begin{eqnarray}\n",
     "\\label{ex1_sys}\n",
     "ax + by + cz & = 3,\\\\\n",
@@ -256,7 +256,7 @@
    "source": [
     "````{exercise}  Finding solution(s)\n",
     ":label: ex-2\n",
-    "Find the solution of the below set of equations sing forward elimination and back substitution\n",
+    "Find the solution for the below set of equations using forward elimination and back substitution\n",
     "\\begin{eqnarray}\n",
     "\\label{ex2_sys}\n",
     "x + 2y + 3z &= 1, \\\\\n",
