modified:   Linear system of equations/022-linsys-matvec.ipynb 	modified:   Linear system of equations/023-linsys-gauss-LU.ipynb

--- a/Linear system of equations/023-linsys-gauss-LU.ipynb
+++ b/Linear system of equations/023-linsys-gauss-LU.ipynb
@@ -108,12 +108,12 @@
     ":width: 500px\n",
     ":align: center\n",
     "```\n",
-    "We will call the $(1,1)$ entry of the coefficient matrix the _first pivot_.  The precise definition of a pivot will become clear as we continue, but one key requirement is that _a pivot must always be nonzero_.  Eliminating the first variable $x_1$ from teh second and third equations is the same as making all of the matrix entries in the column below the pivot equal to zero.  We have already done this with the $(2,1)$ entry in [](#pivot1).  To make the $(3,1)$ entry equal to zero, we subtract the first from from the last row, resulting in the augmented matrix\n",
+    "We will call the $(1,1)$ entry of the coefficient matrix the _first pivot_.  The precise definition of a pivot will become clear as we continue, but one key requirement is that _a pivot must always be nonzero_.  Eliminating the first variable $x_1$ from the second and third equations is the same as making all of the matrix entries in the column below the pivot equal to zero.  We have already done this with the $(2,1)$ entry in [](#pivot1).  To make the $(3,1)$ entry equal to zero, we subtract the first from from the last row, resulting in the augmented matrix\n",
     "\\begin{equation}\n",
     "\\label{pivot2}\n",
     "\\left[ \\begin{array}{ccc|c} 1 & 2 & 1 & 2\\\\ 0 & 2 & -1 & 3\\\\ 0 & -1 & 3 & 1 \\end{array}\\right],\n",
     "\\end{equation}\n",
-    "which we again recognize as the corresponding to the [second equivalent example system](./021-linsys-gauss.ipynb#simple-linsys1).  The _second pivot_ is the $(2,2)$ entry of this matrix, which is $2$, and is hte coefficient of the second variable $x_2$ in the second equation.  Again, the pivot must be nonzero.  We use the [](#rowop1) of adding $1/2$ of the second row to the third row to make the entry below the second pivot equal to 0, resulting in the augmented matrix\n",
+    "which we again recognize as the corresponding to the [second equivalent example system](./021-linsys-gauss.ipynb#simple-linsys1).  The _second pivot_ is the $(2,2)$ entry of this matrix, which is $2$, and is the coefficient of the second variable $x_2$ in the second equation.  Again, the pivot must be nonzero.  We use the [](#rowop1) of adding $1/2$ of the second row to the third row to make the entry below the second pivot equal to 0, resulting in the augmented matrix\n",
     "\\begin{equation}\n",
     "\\label{pivot3}\n",
     "\\left[ \\begin{array}{ccc|c} 1 & 2 & 1 & 2\\\\ 0 & 2 & -1 & 3\\\\ 0 & 0 & \\frac{5}{2} & \\frac{5}{2} \\end{array}\\right],\n",
@@ -156,7 +156,7 @@
     "\n",
     "set $x_n\\leftarrow c_n/u_{nn}$\\\n",
     "for $i=n-1$ to $1$: (decrementing by $-1$ at each iteration)\\\n",
-    "$\\quad$ set $x_i \\leftarrow \\frac{1}{u_{ii}}\\left(c_i-\\displaystyle\\sum_{j=1}^{i+1}u_{ij}x_j\\right)$\\\n",
+    "$\\quad$ set $x_i \\leftarrow \\frac{1}{u_{ii}}\\left(c_i-\\displaystyle\\sum_{j=i+1}^{n}u_{ij}x_j\\right)$\\\n",
     "**return** solution $\\vv x$"
    ]
   },
@@ -221,7 +221,7 @@
     "The _elementary matrix_ associated with an elementary row operation for $m$-rowed matrices is the $m \\times m$ matrix obtained by applying the the row operation to the $m\\times m$ identity matrix $I_m$.\n",
     "```\n",
     "\n",
-    "This definition is a bit abstract, so let's see it in action.  Suppose that we have a system of three equations in three unknowns, encoded by the augmented matrix $M = [ A\\, | \\, \\vv b]$, where $A$ is a $3\\times 3$ matrix and $\\vv b$ is a $3 \\times 1$ vector.  What is the elementary matrix associated with subtracting twice the first row from teh second row?  If we start with the identify matrix \n",
+    "This definition is a bit abstract, so let's see it in action.  Suppose that we have a system of three equations in three unknowns, encoded by the augmented matrix $M = [ A\\, | \\, \\vv b]$, where $A$ is a $3\\times 3$ matrix and $\\vv b$ is a $3 \\times 1$ vector.  What is the elementary matrix associated with subtracting twice the first row from the second row?  If we start with the identify matrix \n",
     "$$\n",
     "I_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & 0 & 1 \\em,\n",
     "$$\n",
@@ -239,9 +239,9 @@
     "\n",
     "````{exercise} Reverse Engineering Elementary Matrices\n",
     ":label: em-ex\n",
-    "What elementary row operations are realized by left multiplying by the following matrices?\n",
+    "What elementary row operations are realized if we left multiply by the following matrices?\n",
     "$$\n",
-    "E_2 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ -1 & 0 & 1 \\em, \\quad E_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & \\frac{1}{2} & 0 \\em.\n",
+    "E_2 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ -1 & 0 & 1 \\em, \\quad E_3 = \\bm 1 & 0 & 0 \\\\ 0 & 1 & 0 \\\\ 0 & \\frac{1}{2} & 1 \\em.\n",
     "$$\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
@@ -272,7 +272,7 @@
     "2 & 6 & 1 \\\\\n",
     "1 & 1 & 4 \\end{bmatrix}}_A\\underbrace{\\begin{bmatrix} x_1 \\\\ x_2 \\\\ x_3 \\end{bmatrix}}_{\\vv x} = \\underbrace{\\begin{bmatrix} 2 \\\\ 7 \\\\ 3 \\end{bmatrix}}_{\\vv b}\n",
     "$$\n",
-    "which we solved by first applying the row operation encoded by $E_1$ (subtracted twice equation 1 from equation 2), then applying the operation encoded by $E_2$ (subtract the first equation from the last equation ), and finally by applyiing the operation encoded by $E_3$ (add 1/2 first equation to last equation).  Funny how that conveninently worked out!  Therefore, if we keep careful track of the row operations and their matrix multiplication realizations, we conclude that:\n",
+    "which we solved by first applying the row operation encoded by $E_1$ (subtracted twice equation 1 from equation 2), then applying the operation encoded by $E_2$ (subtract the first equation from the last equation ), and finally by applying the operation encoded by $E_3$ (add 1/2 first equation to last equation).  Funny how that conveninently worked out!  Therefore, if we keep careful track of the row operations and their matrix multiplication realizations, we conclude that:\n",
     "$$\n",
     "A = \\begin{bmatrix} 1 & 2 & 1 \\\\\n",
     "2 & 6 & 1 \\\\\n",
