--- a/Linear system of equations/022-linsys-matvec.ipynb
+++ b/Linear system of equations/022-linsys-matvec.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d860eeea-d52d-4322-b5f1-64bdc7fbed63",
    "metadata": {},
    "outputs": [],
@@ -171,38 +171,72 @@
    "metadata": {},
    "source": [
     "### Worked Examples\n",
-    "````{exercise}  TODO: Exercise 1\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
+    "````{exercise}  Matrix addition\n",
+    ":label: matrix-addition-ex1\n",
     "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
+    "For (a)-(e), we are given some matrices. If they can be added together, then find their sum. Otherwise, indicate that they can't be added.\n",
+    "\n",
+    "a. $\\begin{bmatrix} 1 & 2 \\\\ -1 & 0 \\end{bmatrix}$ and $\\begin{bmatrix} 3 & -5 \\\\ 2 & 1 \\end{bmatrix}$\n",
+    "\n",
+    "b. $\\begin{bmatrix} 5 \\end{bmatrix}$ and $\\begin{bmatrix} -3 \\end{bmatrix}$\n",
+    "\n",
+    "c. $\\begin{bmatrix} 1&2\\\\3&4\\\\5&6 \\end{bmatrix}$ and $\\begin{bmatrix} 2&4\\\\6&8\\\\10&12 \\end{bmatrix}$\n",
+    "\n",
+    "d. $\\begin{bmatrix} 1 & 2 \\end{bmatrix}$ and $\\begin{bmatrix} 1\\\\3 \\end{bmatrix}$\n",
+    "\n",
+    "e. $\\begin{bmatrix} 1\\\\2 \\end{bmatrix}$ and $\\begin{bmatrix} 1\\\\3 \\end{bmatrix}$ and $\\begin{bmatrix} 2\\\\5 \\end{bmatrix}$\n",
+    "\n",
+    "```{solution} matrix-addition-ex1\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "a. $\\begin{bmatrix} 1 & 2 \\\\ -1 & 0 \\end{bmatrix} + \\begin{bmatrix} 3 & -5 \\\\ 2 & 1 \\end{bmatrix} = \\bm 1+3&2-5\\\\-1+2&0+1 \\em = \\bm 4&-3\\\\1&1 \\em$\n",
+    "\n",
+    "b. $\\begin{bmatrix} 5 \\end{bmatrix} + \\begin{bmatrix} -3 \\end{bmatrix} = \\bm 5 -3 \\em = \\bm -2 \\em$\n",
+    "\n",
+    "c. $\\begin{bmatrix} 1&2\\\\3&4\\\\5&6 \\end{bmatrix} + \\begin{bmatrix} 2&4\\\\6&8\\\\10&12 \\end{bmatrix} = \\bm 1 + 2 & 2 + 4\\\\ 3 + 6 & 4 + 8\\\\5 + 10& 6 + 12 \\em = \\bm 3&6\\\\9&12\\\\15&18 \\em$\n",
+    "\n",
+    "d. They can't be added. The left matrix is a 1-by-2 matrix, whereas the right matrix is a 2-by-1 matrix, meaning they have different dimensions. \n",
+    "\n",
+    "e. $\\begin{bmatrix} 1\\\\2 \\end{bmatrix} + \\begin{bmatrix} 1\\\\3 \\end{bmatrix} + \\begin{bmatrix} 2\\\\5 \\end{bmatrix} = \\bm 1 + 1 + 2 \\\\ 2 + 3 + 5 \\em = \\bm 4 \\\\ 10 \\em$\n",
+    "\n",
     "```\n",
     "````\n",
     "\n",
-    "````{exercise}  TODO: Exercise 1\n",
-    ":label: row-reduce-ex1\n",
-    "Write me\n",
-    ":::{hint} Click me for a hint!\n",
-    ":class: dropdown\n",
-    "Write me\n",
+    "````{exercise}  Scalar multiplication\n",
+    ":label: scalar-multiplication-ex1\n",
     "\n",
-    ":::\n",
-    "```{solution} my-exercise\n",
+    "For (a)-(e), compute the scalar-matrix product.\n",
+    "\n",
+    "a. $5\\bm 1 & 2 \\\\ 3 & 4\\em$\n",
+    "\n",
+    "b. $0\\bm 1 & 1 \\\\ 2 & 3 \\em$\n",
+    "\n",
+    "c. $\\frac 1 2 \\bm 2 & 4 \\\\ 6 & 5 \\em$\n",
+    "\n",
+    "d. $\\sqrt 2 \\bm 1 & \\sqrt 2 \\\\ 0 & \\pi \\em$\n",
+    "\n",
+    "e. $i \\bm 1 & i \\\\ -i & -1 \\em$ where $i = \\sqrt{-1}$\n",
+    "\n",
+    "```{solution} scalar-multiplication-ex1\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "a. $5\\bm 1 & 2 \\\\ 3 & 4\\em = \\bm 5\\cdot 1 & 5\\cdot 2 \\\\ 5\\cdot 3 & 5\\cdot 4\\em = \\bm 5 & 10 \\\\ 15 & 20\\em$\n",
+    "\n",
+    "b. $0\\bm 1 & 1 \\\\ 2 & 3 \\em = \\bm 0\\cdot 1 & 0\\cdot 1 \\\\ 0\\cdot 2 & 0\\cdot 3 \\em = \\bm 0 & 0\\\\ 0 & 0\\em$\n",
+    "\n",
+    "c. $\\frac 1 2 \\bm 2 & 4 \\\\ 6 & 5 \\em = \\bm 2/2 & 4/2 \\\\ 6/2 & 5/2 \\em = \\bm 1 & 2 \\\\ 3 & 5/2 \\em$\n",
+    "\n",
+    "d. $\\sqrt 2 \\bm 1 & \\sqrt 2 \\\\ 0 & \\pi \\em$\n",
+    "\n",
+    "e. $i \\bm 1 & i \\\\ -i & -1 \\em = \\bm i\\cdot 1 & i\\cdot i \\\\i \\cdot -1 & i \\cdot -i \\em= \\bm i & -1 \\\\1 & -i \\em$\n",
+    "\n",
     "```\n",
     "````"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "e4c53400-b163-4e7a-9f5a-2d1f29a2ebbf",
    "metadata": {},
    "outputs": [
@@ -213,7 +247,7 @@
        "       [3, 3, 9]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "bfda96c8-d084-4961-9c1a-40b458947086",
    "metadata": {},
    "outputs": [
@@ -244,7 +278,7 @@
        "       [12, 15, 18]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "dce266e0-5211-4d76-98db-aa1215562d0e",
    "metadata": {},
    "outputs": [
@@ -313,7 +347,7 @@
        "       [17]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,15 +430,20 @@
    "source": [
     "````{exercise}  TODO\n",
     ":label: row-reduce-ex1\n",
-    "Write me\n",
+    "\n",
+    "What is 2 + 2\n",
+    "\n",
     ":::{hint} Click me for a hint!\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "It's more than 3 and less than 5!\n",
     "\n",
     ":::\n",
     "```{solution} my-exercise\n",
     ":class: dropdown\n",
-    "Write me\n",
+    "\n",
+    "It's 4!\n",
+    "\n",
     "```\n",
     "````"
    ]
@@ -547,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "id": "5091e0ce-413c-40c1-87ce-ce07233b973f",
    "metadata": {},
    "outputs": [
@@ -722,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "3cd633c2-ca7b-4d78-b580-16e5fc350adb",
    "metadata": {},
    "outputs": [
@@ -765,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "c8c660f5-f489-4508-91c2-9cd5a052d520",
    "metadata": {},
    "outputs": [
@@ -780,7 +819,7 @@
        "       [ 0.,  0.,  0.,  1.,  0.,  0.]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
